--- a/src/views/layouts/main-layout.ejs
+++ b/src/views/layouts/main-layout.ejs
@@ -124,16 +124,12 @@
                   class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                 >
                   <svg
-                    class="mr-3 h-4 w-4 text-gray-400"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 -960 960 960"
+                    class="mr-3 size-4 text-gray-400"
                   >
                     <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+                      d="M480-489.61q-74.48 0-126.85-52.37-52.37-52.37-52.37-126.85 0-74.48 52.37-126.56 52.37-52.09 126.85-52.09 74.48 0 126.85 52.09 52.37 52.08 52.37 126.56t-52.37 126.85Q554.48-489.61 480-489.61ZM140.78-237.17v-26.35q0-39.26 20.44-72.17 20.43-32.9 54.3-50.22 63.7-31.57 129.93-47.63 66.24-16.07 134.55-16.07 69.39 0 135.65 15.78 66.26 15.79 128.83 47.35 33.87 17.24 54.3 49.99 20.44 32.75 20.44 72.97v26.35q0 44.3-30.85 75.15-30.85 30.85-75.15 30.85H246.78q-44.3 0-75.15-30.85-30.85-30.85-30.85-75.15Zm106 0h466.44v-23.53q0-10.45-5.5-19t-14.5-13.3q-50.61-24.74-103.92-37.67Q536-343.61 480-343.61q-54.87 0-109.3 12.94-54.44 12.93-103.92 37.67-9 4.75-14.5 13.3t-5.5 19v23.53Zm233.2-358.44q30.19 0 51.72-21.5 21.52-21.5 21.52-51.7 0-30.19-21.5-51.43-21.51-21.24-51.7-21.24t-51.72 21.34q-21.52 21.34-21.52 51.31 0 30.2 21.5 51.71 21.51 21.51 51.7 21.51Zm.02-73.22Zm0 431.66Z"
                     />
                   </svg>
                   Profile
@@ -143,16 +139,12 @@
                   class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                 >
                   <svg
-                    class="mr-3 h-4 w-4 text-gray-400"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 -960 960 960"
+                    class="mr-3 size-4 text-gray-400"
                   >
                     <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"
+                      d="M206.78-100.78q-44.3 0-75.15-30.85-30.85-30.85-30.85-75.15v-546.44q0-44.3 30.85-75.15 30.85-30.85 75.15-30.85h224.74q22.09 0 37.55 15.46 15.45 15.46 15.45 37.54 0 22.09-15.45 37.55-15.46 15.45-37.55 15.45H206.78v546.44h224.74q22.09 0 37.55 15.45 15.45 15.46 15.45 37.55 0 22.08-15.45 37.54-15.46 15.46-37.55 15.46H206.78ZM657.61-427H408.48q-22.09 0-37.55-15.46-15.45-15.45-15.45-37.54t15.45-37.54Q386.39-533 408.48-533h249.13l-62-62q-14.96-14.96-14.96-36.61t14.96-37.04q14.95-15.96 36.76-16.18 21.8-.21 37.76 15.74l152.04 152.05q15.4 15.95 15.4 37.04t-15.4 37.04L670.13-290.91q-15.39 15.95-37.26 15.74-21.87-.22-37.26-16.18-14.96-15.39-14.74-37.26.22-21.87 15.17-36.82L657.61-427Z"
                     />
                   </svg>
                   Log Out
@@ -167,10 +159,9 @@
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 -960 960 960"
                     class="mr-3 size-4 text-gray-400"
-                    aria-hidden="true"
                   >
                     <path
-                      d="M435.48-275.48h89.04v-160h160v-89.04h-160v-160h-89.04v160h-160v89.04h160v160ZM480-60.78q-87.52 0-163.91-32.96-76.38-32.96-132.88-89.47-56.51-56.5-89.47-132.88Q60.78-392.48 60.78-480t32.96-163.91q32.96-76.38 89.47-132.88 56.5-56.51 132.88-89.47 76.39-32.96 163.91-32.96t163.91 32.96q76.38 32.96 132.88 89.47 56.51 56.5 89.47 132.88 32.96 76.39 32.96 163.91t-32.96 163.91q-32.96 76.38-89.47 132.88-56.5 56.51-132.88 89.47Q567.52-60.78 480-60.78Z"
+                      d="M435.48-435.48V-320q0 18.92 12.8 31.72 12.8 12.8 31.72 12.8 18.92 0 31.72-12.8 12.8-12.8 12.8-31.72v-115.48H640q18.92 0 31.72-12.8 12.8-12.8 12.8-31.72 0-18.92-12.8-31.72-12.8-12.8-31.72-12.8H524.52V-640q0-18.92-12.8-31.72-12.8-12.8-31.72-12.8-18.92 0-31.72 12.8-12.8 12.8-12.8 31.72v115.48H320q-18.92 0-31.72 12.8-12.8 12.8-12.8 31.72 0 18.92 12.8 31.72 12.8 12.8 31.72 12.8h115.48ZM480-60.78q-87.52 0-163.91-32.96-76.38-32.96-132.88-89.47-56.51-56.5-89.47-132.88Q60.78-392.48 60.78-480t32.96-163.91q32.96-76.38 89.47-132.88 56.5-56.51 132.88-89.47 76.39-32.96 163.91-32.96t163.91 32.96q76.38 32.96 132.88 89.47 56.51 56.5 89.47 132.88 32.96 76.39 32.96 163.91t-32.96 163.91q-32.96 76.38-89.47 132.88-56.5 56.51-132.88 89.47Q567.52-60.78 480-60.78Zm0-106q131.74 0 222.48-90.74 90.74-90.74 90.74-222.48t-90.74-222.48Q611.74-793.22 480-793.22t-222.48 90.74Q166.78-611.74 166.78-480t90.74 222.48q90.74 90.74 222.48 90.74ZM480-480Z"
                     />
                   </svg>
 
@@ -183,14 +174,48 @@
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 -960 960 960"
-                    class="mr-3 size-4 text-gray-400"
+                    class="mr-3 size-4"
                   >
                     <path
-                      d="M166.78-140.78q-44.3 0-75.15-30.85-30.85-30.85-30.85-75.15v-466.44q0-44.3 30.85-75.15 30.85-30.85 75.15-30.85h626.44q44.3 0 75.15 30.85 30.85 30.85 30.85 75.15v466.44q0 44.3-30.85 75.15-30.85 30.85-75.15 30.85H166.78Zm360.57-106h265.87v-466.44H527.35v466.44ZM206.78-320h185.87v-80H206.78v80Zm0-120h185.87v-80H206.78v80Zm0-120h185.87v-80H206.78v80Zm360.57 240h185.87v-80H567.35v80Zm0-120h185.87v-80H567.35v80Zm0-120h185.87v-80H567.35v80Z"
+                      d="m413-599.39 31.52-15.26q17.12-8.26 35.56-8.26t35.4 8.26L547-599.39v-153.83H413v153.83Zm-98.65 335.22q-20.96 0-35.57-14.61t-14.61-35.57q0-20.95 14.61-35.56 14.61-14.61 35.57-14.61h115.48q20.95 0 35.56 14.61Q480-335.3 480-314.35q0 20.96-14.61 35.57t-35.56 14.61H314.35ZM206.78-100.78q-44.3 0-75.15-30.85-30.85-30.85-30.85-75.15v-546.44q0-44.3 30.85-75.15 30.85-30.85 75.15-30.85h546.44q44.3 0 75.15 30.85 30.85 30.85 30.85 75.15v546.44q0 44.3-30.85 75.15-30.85 30.85-75.15 30.85H206.78Zm0-652.44v546.44-546.44Zm0 546.44h546.44v-546.44H647.35v230.7q0 29.78-24.94 45.24-24.93 15.45-51.71 2.06L480-520l-90.7 44.78q-26.78 13.39-51.71-2.06-24.94-15.46-24.94-45.24v-230.7H206.78v546.44Z"
                     />
                   </svg>
 
                   My Posts
+                </a>
+                <% } %> <% if (userInfo.role >= 3) { %>
+                <a
+                  href="/editorial"
+                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 -960 960 960"
+                    class="mr-3 size-4 text-gray-400"
+                  >
+                    <path
+                      d="M206.22-206.78h57.56l352.57-352.57-56.44-57-353.69 353.7v55.87Zm-105.44 106v-206.18l526.87-526.43q13.13-12.7 29.33-19.26 16.19-6.57 33.89-6.57 17.13 0 33.83 6.57 16.69 6.56 29.95 19.69l79.31 78.61q13.13 12.7 19.48 29.68 6.34 16.97 6.34 34.24 0 17.69-6.34 34.17-6.35 16.48-19.48 29.61L308.09-100.78H100.78Zm646.78-589.65L691-747.56l56.56 57.13ZM587.91-587.91l-28-28.44 56.44 57-28.44-28.56Z"
+                    />
+                  </svg>
+
+                  Editorial Tools
+                </a>
+                <% } %> <% if (userInfo.role >= 4) { %>
+                <a
+                  href="/admin"
+                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 -960 960 960"
+                    class="mr-3 size-4 text-gray-400"
+                  >
+                    <path
+                      d="M480-892.65q9.7 0 18.74 1.28t18.3 5.41l233.22 87.18q30.91 11.82 49.94 38.61 19.02 26.78 19.02 60.26V-593q0 22.28-15.46 37.36-15.46 15.07-37.54 15.07-22.09 0-37.55-15.07-15.45-15.08-15.45-37.36v-106.48L480-786.65l-233.22 87.17V-516q0 47.74 13.09 94.06 13.09 46.33 35.48 87.09 22.39 40.76 52.95 73.94 30.57 33.17 65.09 55.6 18.39 13.09 26.02 33.74 7.63 20.66-1.76 40.18-10.39 20.52-31.26 27.09-20.87 6.56-39.83-5.4-103.95-62.78-164.87-173.24Q140.78-393.39 140.78-516v-183.91q0-33.48 19.02-60.26 19.03-26.79 49.94-38.61l233.22-87.18q9.26-4.01 18.52-5.35 9.26-1.34 18.52-1.34ZM680-80q-83 0-141.5-58.5T480-280q0-83 58.5-141.5T680-480q83 0 141.5 58.5T880-280q0 83-58.5 141.5T680-80ZM480-496.26ZM681.13-280q25 0 42.5-17.5t17.5-42.5q0-25-17.5-42.5t-42.5-17.5q-25 0-42.5 17.5t-17.5 42.5q0 25 17.5 42.5t42.5 17.5Zm0 120q23.36 0 43.92-8.09 20.56-8.08 37.56-23.82 7.26-7.13 5.69-17.46-1.56-10.33-11.82-14.89-17.87-8.44-36.97-12.09-19.1-3.65-38.66-3.65-19.57 0-38.66 3.93-19.1 3.94-36.97 11.81-10.26 4.56-11.83 14.89-1.56 10.33 5.7 17.46 17 15.74 37.74 23.82 20.73 8.09 44.3 8.09Z"
+                    />
+                  </svg>
+
+                  Admin Tools
                 </a>
                 <% } %>
               </div>
