admin: login via Google

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -130,11 +130,13 @@
     <div
       class="flex items-center justify-center rounded-md p-2 duration-200 hover:bg-zinc-200"
     >
+    <a href="/google">
       <img
         src="/images/facebook.svg"
         class="size-8 object-contain lg:size-12"
         alt="Facebook"
       />
+    </a>
     </div>
     <div
       class="flex items-center justify-center rounded-md p-2 duration-200 hover:bg-zinc-200"
