--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -131,9 +131,9 @@
       class="flex items-center justify-center rounded-md p-2 duration-200 hover:bg-zinc-200"
     >
       <img
-        src="/images/facebook.svg"
+        src="/images/google.svg"
         class="size-8 object-contain lg:size-12"
-        alt="Facebook"
+        alt="Google"  
       />
     </div>
     <div
