--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,9 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+  .no-marker::-webkit-details-marker {
+    display: none;
+  }
+}
